# cxx-swift-interop-examples

./: GettingStartedWithCppInterop.md  LICENSE  README.md
CxxIOSInterop/: CxxIOSInterop-Bridging-Header.h  SceneDelegate.swift  ViewController.swift
CxxIOSInterop.xcodeproj/: project.pbxproj
CxxIOSInterop/Cxx/: Cxx.cpp  Cxx.hpp  module.modulemap
CxxIOSInterop/CxxIOSInterop/: CxxIOSInteropApp.swift
CxxIOSInterop/CxxIOSInterop/Cxx/: Cxx.hpp  module.modulemap
Cxx_Interop/: Package.swift
Cxx_Interop/Debug/: Cxx_Interop
Cxx_Interop/Debug/Cxx_Interop.swiftmodule/: x86_64.swiftmodule
Forward Interop/build-cmake/Cxx_Interop/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Forward Interop/build-cmake/Cxx_Interop/CMakeScripts/: ReRunCMake.make
Forward Interop/build-cmake/Cxx_Interop/Cxx_Interop.build/Debug-iphoneos/Cxx_Interop.build/Objects-normal/arm64/: Cxx_Interop-OutputFileMap.json  Cxx_Interop.SwiftFileList
Forward Interop/build-cmake/Cxx_Interop/Cxx_Interop.build/Debug/Cxx_Interop.build/Objects-normal/x86_64/: Cxx_Interop-OutputFileMap.json  Cxx_Interop-master.priors  Cxx_Interop-master.swiftdeps  Cxx_Interop.LinkFileList  Example.d  Example.swiftdeps  Example~partial.swiftmodule  Example~partial.swiftsourceinfo  main.d
Forward Interop/build-cmake/Cxx_Interop/Cxx_Interop.build/Debug/ZERO_CHECK.build/: Script-F9EB0F5A0A24E1FDEDBCC837.sh
Forward Interop/build-cmake/Cxx_Interop/Cxx_Interop.build/Debug/cxx-support.build/Objects-normal/x86_64/: cxx-support.LinkFileList
Forward Interop/build-cmake/Cxx_Interop/Sources/Cxx/: Cxx.cpp
(+20 files in other folders)
